--- a/src/main/webapp/resources/css/messageStyle.css
+++ b/src/main/webapp/resources/css/messageStyle.css
@@ -4,7 +4,17 @@ body {
 	margin: 0;
 	padding: 0;
 }
-
+.blur-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0); /* Semi-transparent black background */
+    backdrop-filter: blur(5px); /* Adjust the blur amount as needed */
+    z-index: 999; /* Ensure it's above other content */
+    display: none; /* Initially hidden */
+}
 .popup {
 	position: absolute;
 	top: 50%;
@@ -16,12 +26,13 @@ body {
 	border-radius: 20px;
 	backdrop-filter: blur(20px);
 	box-shadow: 0 0 30px rgba(0, 0, 0, .5);
-	display: flex;
+	display: none;
 	justify-content: center;
 	align-items: center;
 	transform: translate(-50%, -50%);
 	padding: 0 30px 30px;
 	background: transparent;
+	z-index: 1000; 
 }
 
 .icon-message {
@@ -74,7 +85,7 @@ body {
 	text-align: center;
 }
 
-#popup-message {
+.popup-message {
 	display: block;
 	margin-bottom: 10px;
 }
