--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -45,6 +45,8 @@ header {
 	justify-content: space-between;
 	align-items: center;
 	z-index: 99;
+	border: 0px solid rgba(255, 255, 255, .5);
+	backdrop-filter: blur(50px); 
 }
 
 .logo {
@@ -88,8 +90,8 @@ header {
 }
 
 .wrapper {
-	position: relative;
-	top: 30px;
+	position: fixed;
+	top: 20%;
 	width: 500px;
 	height: 450px;
 	background: transparent;
@@ -106,6 +108,7 @@ header {
 }
 
 .wrapper.active {
+	top: 15%;
 	height: 650px;
 }
 
@@ -305,4 +308,17 @@ header {
 .username {
 	font-weight: bold;
 }
-
+.footer
+{
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	padding: 20px 100px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	z-index: 99;
+	border: 0px solid rgba(255, 255, 255, .5);
+	backdrop-filter: blur(50px); 	
+}
